# blackfox

./: .dockerignore  DEPLOY.md  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt
examples/: sample_details.md
resume_agent/: __init__.py  agent.py  cli.py
resume_agent/webapp/: __init__.py  db.py  jobs.py
resume_agent/webapp/static/: style.css
resume_agent/webapp/templates/: base.html  dashboard.html  login.html  register.html  resume.html
