[project]
name = "blackfox"
version = "0.1.0"
description = "Blackfox — prompt-driven LaTeX resume builder powered by Claude + Tectonic"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ruhaan" }]
dependencies = ["anthropic>=0.69.0", "flask>=3.0"]

[project.scripts]
blackfox = "resume_agent.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["resume_agent*"]

[tool.setuptools.package-data]
"resume_agent.webapp" = ["templates/*.html", "static/*"]
